made some changes by adding some codes

--- a/app/templates/newblog.html
+++ b/app/templates/newblog.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%}
 {% import 'bootstrap/wtf.html' as wtf %}
 {% block content %}
-<div  i="particles-js" style="color: white;"  class="bg-light">
+<div  i="particles-js" style="color:black;"  class="bg-light">
     <div class="row">
         <div class="col-md-4"></div>
         
