--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 
 
 {% block content%}
-<header class="masthead" style="background-image: url(https://infoglen.com/wp-content/uploads/2017/03/blog.jpg); background-size: cover; height: 100vh;">
+<header class="masthead" style="background-image: url(https://introvertdear.com/wp-content/uploads/2019/07/why-INFJs-should-start-a-blog-770x470.jpg); background-size: cover; height: 100vh;">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
@@ -21,14 +21,13 @@
 <div class="container">
 <div class="row">
   <div class="col-md-8 land">
-    <h2 class="text-center">What if all we do is just talk and express ourselves?</h2>
+    <h2 class="text-center">Here you can let us know what you feel.</h2>
     {% for blog in blogs.items %}
           <div class="container bg mb-2">
               <hr>
               <div class="row ">
                   <div class="col-md-2 ">
-                          <!-- <img class="rounded-circle blog-img mr-10" src="{{url_for('static', filename='photos/' + blog.user.profile_pic_path)}}" style="width: 80px;">
-                          <p id="usern"><a href="{{url_for('main.user_post',username=blog.user.username )}}"><span  style="color: blue"><strong>{{blog.user.username}}</strong></span> </a> </p>  -->
+                          
                   </div>
                   <div class="col-md-10 pr-4 d-justify userblog">
                       
