--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -7,7 +7,7 @@
       </ul>
       <ul class="nav navbar-nav float-right">
         {% if current_user.is_authenticated %}
-        <li class="nav-link" style="color:white;"> <a class="nav-link" href="{{url_for('main.profile',username=current_user.username)}}"> {{current_user.username}}</a></li>
+        <li class="nav-link" style="color:black;"> <a class="nav-link" href="{{url_for('main.profile',username=current_user.username)}}"> {{current_user.username}}</a></li>
         <li class="nav-item"> <a class="nav-link" href="{{url_for('auth.logout')}}">Sign out</a></li>
         {% else %}
         <li class="nav-item"><a class="nav-link" href="{{url_for('auth.login')}}">Sign in</a></li>
