added some changes

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -27,7 +27,7 @@
                         <a class="btn btn-success btn-sm m-1"  data-toggle="modal" data-target="#modalComment">Comment</a>
                         {% if blog.user == current_user %}
                         <a class="btn btn-success btn-sm m-1" href="{{url_for('main.updateblog',blog_id=blog.id)}}">Edit Blog</a>
-                        <!-- <button type="submit" class="btn btn-sm btn-danger m-1" data-toggle="modal" data-target="#modalConfirmDelete">Delete</button> -->
+                        <button type="submit" class="btn btn-sm btn-danger m-1" data-toggle="modal" data-target="#modalConfirmDelete">Delete</button>
                         {% endif %}
                     </div>
                 </div>
