--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -25,7 +25,7 @@
     {% else %}
         <div class="card mt-3">
             <div class="card-body">
-                <h4 class="card-title">What do you think about this pitch?</h4>
+                <h4 class="card-title">What do you think about this blog?</h4>
             </div>
         
         <div class="card-text">
